--- a/index.html
+++ b/index.html
@@ -1,282 +1,73 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>EG Store — Digital Design Services</title>
-  <link rel="stylesheet" href="styles.css" />
+  <meta charset="UTF-8">
+  <title>EG Store</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+  <!-- CSS FILE -->
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  <header class="header">
-    <div class="container nav">
-      <div class="brand">
-        <div class="logo">EG</div>
-        <div>
-          <div class="brand-title">EG Store</div>
-          <div class="brand-sub">Digital design services • Pay securely via PayTabs links</div>
-        </div>
-      </div>
 
-      <nav class="menu">
-        <a href="#services">Services</a>
-        <a href="#products">Packages</a>
-        <a href="#contact">Contact</a>
-      </nav>
+  <header class="header">
+    <div class="container">
+      <h1 class="logo">EG Store</h1>
+      <p class="subtitle">
+        We provide digital services and products based on direct requests.
+      </p>
     </div>
   </header>
 
-  <main>
-    <section class="hero">
-      <div class="container hero-grid">
-        <div>
-          <h1>Design that looks premium and sells.</h1>
-          <p class="lead">
-            We provide professional graphic design services upon direct request.
-            Choose a package below and pay securely using PayTabs payment links.
-          </p>
+  <main class="container">
 
-          <div class="hero-cta">
-            <a class="btn" href="#products">View Packages</a>
-            <a class="btn ghost" href="#contact">Request Custom Quote</a>
-          </div>
+    <!-- PRODUCTS -->
+    <section class="products">
+      <h2>Our Services</h2>
 
-          <div class="badges">
-            <span class="badge">Fast delivery</span>
-            <span class="badge">High-quality files</span>
-            <span class="badge">Revisions included</span>
-          </div>
-        </div>
-
-        <div class="card hero-card">
-          <h3>How it works</h3>
-          <ol class="steps">
-            <li>Pick a package (or request custom).</li>
-            <li>Pay via PayTabs secure link.</li>
-            <li>Receive your files + revisions.</li>
-          </ol>
-          <div class="note">
-            Tip: Replace the <b>PAYTABS_LINK</b> placeholders with your real PayTabs payment links.
-          </div>
-        </div>
+      <div class="product">
+        <h3>Logo Design</h3>
+        <p>Professional logo design tailored to your brand.</p>
+        <span class="price">50 USD</span>
+        <a class="btn" target="_blank" href="PAYTABS_LINK_LOGO">Pay Now</a>
       </div>
+
+      <div class="product">
+        <h3>Social Media Design Pack</h3>
+        <p>10 custom social media post designs.</p>
+        <span class="price">100 USD</span>
+        <a class="btn" target="_blank" href="PAYTABS_LINK_SOCIAL">Pay Now</a>
+      </div>
+
+      <div class="product">
+        <h3>Discord Server Design</h3>
+        <p>Complete Discord server branding and layout.</p>
+        <span class="price">80 USD</span>
+        <a class="btn" target="_blank" href="PAYTABS_LINK_DISCORD">Pay Now</a>
+      </div>
+
     </section>
 
-    <section id="services" class="section">
-      <div class="container">
-        <h2>What I offer</h2>
-        <p class="muted">Professional design services tailored for creators, brands, and online businesses.</p>
-
-        <div class="grid-3">
-          <div class="card">
-            <h3>Branding</h3>
-            <p>Logos, brand identity, color systems, typography, and brand guidelines.</p>
-          </div>
-          <div class="card">
-            <h3>Social Media</h3>
-            <p>High-converting post designs, reels covers, story templates, and ad creatives.</p>
-          </div>
-          <div class="card">
-            <h3>Print & Ads</h3>
-            <p>Flyers, posters, business cards, menus, banners, and marketing materials.</p>
-          </div>
-        </div>
-      </div>
+    <!-- CONTACT -->
+    <section class="contact">
+      <h2>Contact</h2>
+      <p><strong>Email:</strong> 7moty4050@gmail.com</p>
+      <p><strong>WhatsApp:</strong> +21208519473/p>
     </section>
 
-    <section id="products" class="section alt">
-      <div class="container">
-        <div class="section-head">
-          <div>
-            <h2>Packages</h2>
-            <p class="muted">Pick a package and pay instantly. Need something else? Request a custom quote.</p>
-          </div>
-          <a class="btn ghost small" href="#contact">Custom Quote</a>
-        </div>
-
-        <div class="grid-3">
-          <!-- PRODUCT 1 -->
-          <article class="product card">
-            <div class="product-top">
-              <div>
-                <h3>Logo Starter</h3>
-                <p class="muted">Clean, modern logo design for new brands.</p>
-              </div>
-              <div class="price">50 USD</div>
-            </div>
-
-            <ul class="list">
-              <li>2 logo concepts</li>
-              <li>2 revisions</li>
-              <li>PNG + JPG + transparent</li>
-              <li>Delivery: 2–3 days</li>
-            </ul>
-
-            <div class="actions">
-              <a class="btn full" target="_blank" href="PAYTABS_LINK_LOGO_STARTER">Pay Now</a>
-              <a class="link" href="product-logo-starter.html">Details</a>
-            </div>
-          </article>
-
-          <!-- PRODUCT 2 -->
-          <article class="product card">
-            <div class="product-top">
-              <div>
-                <h3>Social Pack (10 Posts)</h3>
-                <p class="muted">Premium posts for Instagram/Facebook with your branding.</p>
-              </div>
-              <div class="price">100 USD</div>
-            </div>
-
-            <ul class="list">
-              <li>10 post designs</li>
-              <li>1 story template</li>
-              <li>2 revisions</li>
-              <li>Delivery: 2–4 days</li>
-            </ul>
-
-            <div class="actions">
-              <a class="btn full" target="_blank" href="PAYTABS_LINK_SOCIAL_10">Pay Now</a>
-              <a class="link" href="product-social-pack.html">Details</a>
-            </div>
-          </article>
-
-          <!-- PRODUCT 3 -->
-          <article class="product card">
-            <div class="product-top">
-              <div>
-                <h3>Business Card + Letterhead</h3>
-                <p class="muted">Professional stationery set ready for print.</p>
-              </div>
-              <div class="price">45 USD</div>
-            </div>
-
-            <ul class="list">
-              <li>Business card (2 sides)</li>
-              <li>Letterhead design</li>
-              <li>Print-ready PDF</li>
-              <li>Delivery: 1–2 days</li>
-            </ul>
-
-            <div class="actions">
-              <a class="btn full" target="_blank" href="PAYTABS_LINK_STATIONERY">Pay Now</a>
-              <a class="link" href="#contact">Ask first</a>
-            </div>
-          </article>
-
-          <!-- PRODUCT 4 -->
-          <article class="product card">
-            <div class="product-top">
-              <div>
-                <h3>Discord Server Design</h3>
-                <p class="muted">Complete Discord branding: banner, icons, panels & style.</p>
-              </div>
-              <div class="price">80 USD</div>
-            </div>
-
-            <ul class="list">
-              <li>Server banner + icon</li>
-              <li>3–6 info panels</li>
-              <li>Role icons (basic)</li>
-              <li>Delivery: 2–5 days</li>
-            </ul>
-
-            <div class="actions">
-              <a class="btn full" target="_blank" href="PAYTABS_LINK_DISCORD">Pay Now</a>
-              <a class="link" href="#contact">Custom details</a>
-            </div>
-          </article>
-
-          <!-- PRODUCT 5 -->
-          <article class="product card highlight">
-            <div class="tag">Best value</div>
-
-            <div class="product-top">
-              <div>
-                <h3>Brand Kit (Pro)</h3>
-                <p class="muted">Full identity package for serious brands.</p>
-              </div>
-              <div class="price">180 USD</div>
-            </div>
-
-            <ul class="list">
-              <li>3 logo concepts</li>
-              <li>Brand colors + typography</li>
-              <li>Mini brand guidelines</li>
-              <li>Social avatar + cover</li>
-            </ul>
-
-            <div class="actions">
-              <a class="btn full" target="_blank" href="PAYTABS_LINK_BRAND_KIT">Pay Now</a>
-              <a class="link" href="#contact">Confirm scope</a>
-            </div>
-          </article>
-
-          <!-- PRODUCT 6 -->
-          <article class="product card">
-            <div class="product-top">
-              <div>
-                <h3>Thumbnail (YouTube)</h3>
-                <p class="muted">High CTR thumbnail tailored to your niche.</p>
-              </div>
-              <div class="price">15 USD</div>
-            </div>
-
-            <ul class="list">
-              <li>1 thumbnail</li>
-              <li>1 revision</li>
-              <li>Fast delivery: 12–24h</li>
-              <li>Optimized for mobile</li>
-            </ul>
-
-            <div class="actions">
-              <a class="btn full" target="_blank" href="PAYTABS_LINK_THUMBNAIL">Pay Now</a>
-              <a class="link" href="#contact">Bulk price</a>
-            </div>
-          </article>
-        </div>
-
-        <div class="fineprint">
-          <p class="muted">
-            Note: Prices are starting prices. Complex requests may require a custom quote.
-          </p>
-        </div>
-      </div>
+    <!-- POLICIES -->
+    <section class="policies">
+      <a href="privacy.html">Privacy Policy</a> |
+      <a href="terms.html">Terms & Conditions</a> |
+      <a href="refund.html">Refund Policy</a> |
+      <a href="contact.html">Contact Page</a>
     </section>
 
-    <section id="contact" class="section">
-      <div class="container">
-        <h2>Contact</h2>
-        <p class="muted">For custom requests, send details and references.</p>
-
-        <div class="grid-2">
-          <div class="card">
-            <h3>Get in touch</h3>
-            <p><b>Email:</b> support@egstore.com</p>
-            <p><b>WhatsApp:</b> +20XXXXXXXXXX</p>
-            <p class="muted">Response time: within 24 hours.</p>
-          </div>
-
-          <div class="card">
-            <h3>Policies</h3>
-            <p class="muted">Required for verification & payments.</p>
-            <div class="policy-links">
-              <a href="privacy.html">Privacy Policy</a>
-              <a href="terms.html">Terms & Conditions</a>
-              <a href="refund.html">Refund Policy</a>
-              <a href="contact.html">Contact Page</a>
-            </div>
-          </div>
-        </div>
-
-        <footer class="footer">
-          <span>© <span id="y"></span> EG Store</span>
-        </footer>
-      </div>
-    </section>
   </main>
 
-  <script>
-    document.getElementById('y').textContent = new Date().getFullYear();
-  </script>
+  <footer class="footer">
+    <p>© 2026 EG Store</p>
+  </footer>
+
 </body>
 </html>
