--- a/index.html
+++ b/index.html
@@ -29,21 +29,21 @@
         <h3>Logo Design</h3>
         <p>Professional logo design tailored to your brand.</p>
         <span class="price">50 USD</span>
-        <a class="btn" target="_blank" href="PAYTABS_LINK_LOGO">Pay Now</a>
+        <a class="btn" target="_blank" href="https://secure-egypt.paytabs.com/payment/link/144502/6275707">Pay Now</a>
       </div>
 
       <div class="product">
         <h3>Social Media Design Pack</h3>
         <p>10 custom social media post designs.</p>
         <span class="price">100 USD</span>
-        <a class="btn" target="_blank" href="PAYTABS_LINK_SOCIAL">Pay Now</a>
+        <a class="btn" target="_blank" href="https://secure-egypt.paytabs.com/payment/link/144502/6275707">Pay Now</a>
       </div>
 
       <div class="product">
         <h3>Discord Server Design</h3>
         <p>Complete Discord server branding and layout.</p>
         <span class="price">80 USD</span>
-        <a class="btn" target="_blank" href="PAYTABS_LINK_DISCORD">Pay Now</a>
+        <a class="btn" target="_blank" href="https://secure-egypt.paytabs.com/payment/link/144502/6275707">Pay Now</a>
       </div>
 
     </section>
