--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
   <meta charset="UTF-8">
   <title>EG Store</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+  <!-- CSS FILE -->
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -12,50 +14,45 @@
     <div class="container">
       <h1 class="logo">EG Store</h1>
       <p class="subtitle">
-        Digital services and products based on direct requests.
+        We provide digital services and products based on direct requests.
       </p>
     </div>
   </header>
 
   <main class="container">
 
-    <!-- SERVICES -->
+    <!-- PRODUCTS -->
     <section class="products">
       <h2>Our Services</h2>
 
       <div class="product">
         <h3>Logo Design</h3>
         <p>Professional logo design tailored to your brand.</p>
-        <div class="product-footer">
-          <span class="price">50 USD</span>
-          <a class="btn" target="_blank" href="PAYTABS_LINK_LOGO">Pay Now</a>
-        </div>
+        <span class="price">50 USD</span>
+        <a class="btn" target="_blank" href="PAYTABS_LINK_LOGO">Pay Now</a>
       </div>
 
       <div class="product">
         <h3>Social Media Design Pack</h3>
         <p>10 custom social media post designs.</p>
-        <div class="product-footer">
-          <span class="price">100 USD</span>
-          <a class="btn" target="_blank" href="PAYTABS_LINK_SOCIAL">Pay Now</a>
-        </div>
+        <span class="price">100 USD</span>
+        <a class="btn" target="_blank" href="PAYTABS_LINK_SOCIAL">Pay Now</a>
       </div>
 
       <div class="product">
         <h3>Discord Server Design</h3>
         <p>Complete Discord server branding and layout.</p>
-        <div class="product-footer">
-          <span class="price">80 USD</span>
-          <a class="btn" target="_blank" href="PAYTABS_LINK_DISCORD">Pay Now</a>
-        </div>
+        <span class="price">80 USD</span>
+        <a class="btn" target="_blank" href="PAYTABS_LINK_DISCORD">Pay Now</a>
       </div>
+
     </section>
 
     <!-- CONTACT -->
     <section class="contact">
       <h2>Contact</h2>
       <p><strong>Email:</strong> 7moty4050@gmail.com</p>
-      <p><strong>WhatsApp:</strong> +21208519473</p>
+      <p><strong>WhatsApp:</strong> +201208519473</p>
     </section>
 
     <!-- POLICIES -->
