--- a/index.html
+++ b/index.html
@@ -1,73 +1,232 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>EG Store</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-  <!-- CSS FILE -->
-  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
 
-  <header class="header">
-    <div class="container">
-      <h1 class="logo">EG Store</h1>
-      <p class="subtitle">
-        We provide digital services and products based on direct requests.
-      </p>
+<header class="header">
+  <div class="container header-inner">
+    <a class="brand" href="index.html">
+      <img src="logo.png" class="brand-logo" alt="EG Store Logo" />
+      <div class="brand-text">
+        <div class="brand-name">EG Store</div>
+        <div class="brand-sub">Digital design services • Pay via PayTabs links</div>
+      </div>
+    </a>
+
+    <nav class="nav">
+      <a href="#services">Services</a>
+      <a href="#packages">Packages</a>
+      <a href="contact.html">Contact</a>
+    </nav>
+  </div>
+</header>
+
+<main>
+  <section class="hero">
+    <div class="container hero-grid">
+      <div>
+        <h1>Premium design that sells.</h1>
+        <p class="lead">
+          We provide digital graphic design services upon direct request.
+          Choose a package and pay securely using PayTabs payment links.
+        </p>
+
+        <div class="cta">
+          <a class="btn" href="#packages">View Packages</a>
+          <a class="btn ghost" href="contact.html">Request Custom Quote</a>
+        </div>
+
+        <div class="chips">
+          <span class="chip">Fast delivery</span>
+          <span class="chip">High-quality files</span>
+          <span class="chip">Revisions included</span>
+        </div>
+      </div>
+
+      <div class="card">
+        <h3>How it works</h3>
+        <ol class="steps">
+          <li>Select a package.</li>
+          <li>Pay via PayTabs secure link.</li>
+          <li>Receive files + revisions.</li>
+        </ol>
+        <p class="muted small">
+          Replace <b>PAYTABS_LINK_...</b> with your real payment links.
+        </p>
+      </div>
     </div>
-  </header>
+  </section>
 
-  <main class="container">
+  <section id="services" class="section">
+    <div class="container">
+      <h2>What I offer</h2>
+      <p class="muted">Branding, social media, Discord design, thumbnails, and print.</p>
 
-    <!-- PRODUCTS -->
-    <section class="products">
-      <h2>Our Services</h2>
+      <div class="grid-3">
+        <div class="card">
+          <h3>Branding</h3>
+          <p class="muted">Logos, brand identity, colors, typography & guidelines.</p>
+        </div>
+        <div class="card">
+          <h3>Social Media</h3>
+          <p class="muted">Posts, stories, ads, covers — optimized for engagement.</p>
+        </div>
+        <div class="card">
+          <h3>Community Design</h3>
+          <p class="muted">Discord branding: banners, icons, panels, role icons.</p>
+        </div>
+      </div>
+    </div>
+  </section>
 
-      <div class="product">
-        <h3>Logo Design</h3>
-        <p>Professional logo design tailored to your brand.</p>
-        <span class="price">50 USD</span>
-        <a class="btn" target="_blank" href="PAYTABS_LINK_LOGO">Pay Now</a>
+  <section id="packages" class="section alt">
+    <div class="container">
+      <div class="section-head">
+        <div>
+          <h2>Packages</h2>
+          <p class="muted">Direct purchase via PayTabs links — no cart needed.</p>
+        </div>
+        <a class="btn ghost small" href="contact.html">Custom Quote</a>
       </div>
 
-      <div class="product">
-        <h3>Social Media Design Pack</h3>
-        <p>10 custom social media post designs.</p>
-        <span class="price">100 USD</span>
-        <a class="btn" target="_blank" href="PAYTABS_LINK_SOCIAL">Pay Now</a>
+      <div class="grid-3">
+        <!-- 1 -->
+        <article class="product card">
+          <div class="top">
+            <div>
+              <h3>Logo Starter</h3>
+              <p class="muted">Clean modern logo for startups.</p>
+            </div>
+            <div class="price">50 USD</div>
+          </div>
+          <ul class="list">
+            <li>2 concepts</li>
+            <li>2 revisions</li>
+            <li>PNG + JPG + transparent</li>
+            <li>Delivery: 2–3 days</li>
+          </ul>
+          <a class="btn full" target="_blank" href="PAYTABS_LINK_LOGO_STARTER">Pay Now</a>
+        </article>
+
+        <!-- 2 -->
+        <article class="product card">
+          <div class="top">
+            <div>
+              <h3>Social Pack (10 Posts)</h3>
+              <p class="muted">Premium posts with your branding.</p>
+            </div>
+            <div class="price">100 USD</div>
+          </div>
+          <ul class="list">
+            <li>10 posts</li>
+            <li>1 story template</li>
+            <li>2 revisions</li>
+            <li>Delivery: 2–4 days</li>
+          </ul>
+          <a class="btn full" target="_blank" href="PAYTABS_LINK_SOCIAL_10">Pay Now</a>
+        </article>
+
+        <!-- 3 -->
+        <article class="product card">
+          <div class="top">
+            <div>
+              <h3>Discord Server Design</h3>
+              <p class="muted">Full Discord branding pack.</p>
+            </div>
+            <div class="price">80 USD</div>
+          </div>
+          <ul class="list">
+            <li>Banner + icon</li>
+            <li>3–6 panels</li>
+            <li>Basic role icons</li>
+            <li>Delivery: 2–5 days</li>
+          </ul>
+          <a class="btn full" target="_blank" href="PAYTABS_LINK_DISCORD">Pay Now</a>
+        </article>
+
+        <!-- 4 -->
+        <article class="product card">
+          <div class="top">
+            <div>
+              <h3>Thumbnail (YouTube)</h3>
+              <p class="muted">High CTR thumbnail.</p>
+            </div>
+            <div class="price">15 USD</div>
+          </div>
+          <ul class="list">
+            <li>1 thumbnail</li>
+            <li>1 revision</li>
+            <li>Delivery: 12–24h</li>
+            <li>Mobile optimized</li>
+          </ul>
+          <a class="btn full" target="_blank" href="PAYTABS_LINK_THUMBNAIL">Pay Now</a>
+        </article>
+
+        <!-- 5 -->
+        <article class="product card">
+          <div class="top">
+            <div>
+              <h3>Business Card + Letterhead</h3>
+              <p class="muted">Print-ready stationery set.</p>
+            </div>
+            <div class="price">45 USD</div>
+          </div>
+          <ul class="list">
+            <li>Card (2 sides)</li>
+            <li>Letterhead</li>
+            <li>Print PDF</li>
+            <li>Delivery: 1–2 days</li>
+          </ul>
+          <a class="btn full" target="_blank" href="PAYTABS_LINK_STATIONERY">Pay Now</a>
+        </article>
+
+        <!-- 6 -->
+        <article class="product card best">
+          <div class="badge">Best value</div>
+          <div class="top">
+            <div>
+              <h3>Brand Kit (Pro)</h3>
+              <p class="muted">Full identity package.</p>
+            </div>
+            <div class="price">180 USD</div>
+          </div>
+          <ul class="list">
+            <li>3 logo concepts</li>
+            <li>Colors + typography</li>
+            <li>Mini brand guide</li>
+            <li>Avatar + cover</li>
+          </ul>
+          <a class="btn full" target="_blank" href="PAYTABS_LINK_BRAND_KIT">Pay Now</a>
+        </article>
       </div>
 
-      <div class="product">
-        <h3>Discord Server Design</h3>
-        <p>Complete Discord server branding and layout.</p>
-        <span class="price">80 USD</span>
-        <a class="btn" target="_blank" href="PAYTABS_LINK_DISCORD">Pay Now</a>
+      <div class="policy-bar">
+        <a href="privacy.html">Privacy</a>
+        <span>•</span>
+        <a href="terms.html">Terms</a>
+        <span>•</span>
+        <a href="refund.html">Refund</a>
+        <span>•</span>
+        <a href="contact.html">Contact</a>
       </div>
+    </div>
+  </section>
+</main>
 
-    </section>
+<footer class="footer">
+  <div class="container footer-inner">
+    <div class="muted small">© <span id="y"></span> EG Store</div>
+    <div class="muted small">PayTabs links • Direct order</div>
+  </div>
+</footer>
 
-    <!-- CONTACT -->
-    <section class="contact">
-      <h2>Contact</h2>
-      <p><strong>Email:</strong> 7moty4050@gmail.com</p>
-      <p><strong>WhatsApp:</strong> +201208519473</p>
-    </section>
-
-    <!-- POLICIES -->
-    <section class="policies">
-      <a href="privacy.html">Privacy Policy</a> |
-      <a href="terms.html">Terms & Conditions</a> |
-      <a href="refund.html">Refund Policy</a> |
-      <a href="contact.html">Contact Page</a>
-    </section>
-
-  </main>
-
-  <footer class="footer">
-    <p>© 2026 EG Store</p>
-  </footer>
-
+<script>
+  document.getElementById("y").textContent = new Date().getFullYear();
+</script>
 </body>
 </html>
