--- a/index.html
+++ b/index.html
@@ -1,92 +1,249 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>EG Store</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
 
 <header class="header">
   <div class="container header-inner">
-    <div class="brand">
-      <img src="logo.png" alt="EG Store" class="logo-img" />
-      <span class="brand-name">EG Store</span>
-    </div>
+    <a class="brand" href="index.html">
+      <img src="logo.png" class="brand-logo" alt="EG Store Logo" />
+      <div class="brand-text">
+        <div class="brand-name">EG Store</div>
+        <div class="brand-sub">Digital design services • Direct order</div>
+      </div>
+    </a>
 
     <nav class="nav">
       <a href="#services">Services</a>
+      <a href="#packages">Packages</a>
       <a href="#contact">Contact</a>
-      <a href="privacy.html">Privacy</a>
     </nav>
   </div>
 </header>
 
-<section class="hero">
-  <div class="container">
-    <h1>Digital Design Services</h1>
-    <p>Professional digital services and products based on direct requests.</p>
-  </div>
-</section>
-
-<main class="container">
-
-  <section id="services" class="services">
-    <div class="section-head">
+<main>
+  <section class="hero">
+    <div class="container hero-grid">
       <div>
-        <h2>Our Services</h2>
-        <p class="muted">Pay by bank transfer (IBAN) — details appear after clicking Buy Now.</p>
-      </div>
-    </div>
+        <h1>Premium design that sells.</h1>
+        <p class="lead">
+          Choose a package below. Click <b>Buy Now</b> to view bank transfer details (IBAN & Account Number).
+        </p>
 
-    <div class="cards">
-      <div class="card">
-        <h3>Logo Design</h3>
-        <p>Professional logo design tailored to your brand.</p>
-        <div class="card-footer">
-          <span class="price">50 USD</span>
-          <a class="btn" href="#" onclick="openBank(event, 'Logo Design', '50 USD')">Buy Now</a>
+        <div class="cta">
+          <a class="btn" href="#packages">View Packages</a>
+          <a class="btn ghost" href="#contact">Request Custom</a>
+        </div>
+
+        <div class="chips">
+          <span class="chip">Fast delivery</span>
+          <span class="chip">High-quality files</span>
+          <span class="chip">Revisions included</span>
         </div>
       </div>
 
       <div class="card">
-        <h3>Social Media Design Pack</h3>
-        <p>10 custom social media post designs.</p>
-        <div class="card-footer">
-          <span class="price">100 USD</span>
-          <a class="btn" href="#" onclick="openBank(event, 'Social Media Pack (10 Posts)', '100 USD')">Buy Now</a>
-        </div>
-      </div>
-
-      <div class="card">
-        <h3>Discord Server Design</h3>
-        <p>Complete Discord server branding and layout.</p>
-        <div class="card-footer">
-          <span class="price">80 USD</span>
-          <a class="btn" href="#" onclick="openBank(event, 'Discord Server Design', '80 USD')">Buy Now</a>
-        </div>
+        <h3>How it works</h3>
+        <ol class="steps">
+          <li>Select a package.</li>
+          <li>Click <b>Buy Now</b> to show bank transfer details.</li>
+          <li>Complete the transfer and send confirmation.</li>
+          <li>Receive files + revisions.</li>
+        </ol>
+        <p class="muted small">
+          Bank transfer details appear in a pop-up after clicking Buy Now.
+        </p>
       </div>
     </div>
   </section>
 
-  <section id="contact" class="contact">
-    <h2>Contact</h2>
-    <p>Email: <b>7moty4050@gmail.com</b></p>
-    <p>WhatsApp: <b>+21208519473</b></p>
+  <section id="services" class="section">
+    <div class="container">
+      <h2>What I offer</h2>
+      <p class="muted">Branding, social media, Discord design, thumbnails, and print.</p>
+
+      <div class="grid-3">
+        <div class="card">
+          <h3>Branding</h3>
+          <p class="muted">Logos, brand identity, colors, typography & guidelines.</p>
+        </div>
+        <div class="card">
+          <h3>Social Media</h3>
+          <p class="muted">Posts, stories, ads, covers — optimized for engagement.</p>
+        </div>
+        <div class="card">
+          <h3>Community Design</h3>
+          <p class="muted">Discord branding: banners, icons, panels, role icons.</p>
+        </div>
+      </div>
+    </div>
   </section>
 
-  <section class="policies">
-    <a href="privacy.html">Privacy Policy</a> |
-    <a href="terms.html">Terms & Conditions</a> |
-    <a href="refund.html">Refund Policy</a> |
-    <a href="contact.html">Contact Page</a>
+  <section id="packages" class="section alt">
+    <div class="container">
+      <div class="section-head">
+        <div>
+          <h2>Packages</h2>
+          <p class="muted">Direct purchase via bank transfer details.</p>
+        </div>
+        <a class="btn ghost small" href="#contact">Custom Quote</a>
+      </div>
+
+      <div class="grid-3">
+        <!-- 1 -->
+        <article class="product card">
+          <div class="top">
+            <div>
+              <h3>Logo Starter</h3>
+              <p class="muted">Clean modern logo for startups.</p>
+            </div>
+            <div class="price">50 USD</div>
+          </div>
+          <ul class="list">
+            <li>2 concepts</li>
+            <li>2 revisions</li>
+            <li>PNG + JPG + transparent</li>
+            <li>Delivery: 2–3 days</li>
+          </ul>
+          <a class="btn full" href="#" onclick="openBank(event,'Logo Starter','50 USD')">Buy Now</a>
+        </article>
+
+        <!-- 2 -->
+        <article class="product card">
+          <div class="top">
+            <div>
+              <h3>Social Pack (10 Posts)</h3>
+              <p class="muted">Premium posts with your branding.</p>
+            </div>
+            <div class="price">100 USD</div>
+          </div>
+          <ul class="list">
+            <li>10 posts</li>
+            <li>1 story template</li>
+            <li>2 revisions</li>
+            <li>Delivery: 2–4 days</li>
+          </ul>
+          <a class="btn full" href="#" onclick="openBank(event,'Social Pack (10 Posts)','100 USD')">Buy Now</a>
+        </article>
+
+        <!-- 3 -->
+        <article class="product card">
+          <div class="top">
+            <div>
+              <h3>Discord Server Design</h3>
+              <p class="muted">Full Discord branding pack.</p>
+            </div>
+            <div class="price">80 USD</div>
+          </div>
+          <ul class="list">
+            <li>Banner + icon</li>
+            <li>3–6 panels</li>
+            <li>Basic role icons</li>
+            <li>Delivery: 2–5 days</li>
+          </ul>
+          <a class="btn full" href="#" onclick="openBank(event,'Discord Server Design','80 USD')">Buy Now</a>
+        </article>
+
+        <!-- 4 -->
+        <article class="product card">
+          <div class="top">
+            <div>
+              <h3>Thumbnail (YouTube)</h3>
+              <p class="muted">High CTR thumbnail.</p>
+            </div>
+            <div class="price">15 USD</div>
+          </div>
+          <ul class="list">
+            <li>1 thumbnail</li>
+            <li>1 revision</li>
+            <li>Delivery: 12–24h</li>
+            <li>Mobile optimized</li>
+          </ul>
+          <a class="btn full" href="#" onclick="openBank(event,'Thumbnail (YouTube)','15 USD')">Buy Now</a>
+        </article>
+
+        <!-- 5 -->
+        <article class="product card">
+          <div class="top">
+            <div>
+              <h3>Business Card + Letterhead</h3>
+              <p class="muted">Print-ready stationery set.</p>
+            </div>
+            <div class="price">45 USD</div>
+          </div>
+          <ul class="list">
+            <li>Card (2 sides)</li>
+            <li>Letterhead</li>
+            <li>Print PDF</li>
+            <li>Delivery: 1–2 days</li>
+          </ul>
+          <a class="btn full" href="#" onclick="openBank(event,'Business Card + Letterhead','45 USD')">Buy Now</a>
+        </article>
+
+        <!-- 6 -->
+        <article class="product card best">
+          <div class="badge">Best value</div>
+          <div class="top">
+            <div>
+              <h3>Brand Kit (Pro)</h3>
+              <p class="muted">Full identity package.</p>
+            </div>
+            <div class="price">180 USD</div>
+          </div>
+          <ul class="list">
+            <li>3 logo concepts</li>
+            <li>Colors + typography</li>
+            <li>Mini brand guide</li>
+            <li>Avatar + cover</li>
+          </ul>
+          <a class="btn full" href="#" onclick="openBank(event,'Brand Kit (Pro)','180 USD')">Buy Now</a>
+        </article>
+      </div>
+
+      <div class="policy-bar">
+        <a href="privacy.html">Privacy</a>
+        <span>•</span>
+        <a href="terms.html">Terms</a>
+        <span>•</span>
+        <a href="refund.html">Refund</a>
+        <span>•</span>
+        <a href="contact.html">Contact</a>
+      </div>
+    </div>
   </section>
 
+  <section id="contact" class="section">
+    <div class="container">
+      <h2>Contact</h2>
+      <p class="muted">Send your requirements + references to start.</p>
+      <div class="grid-3">
+        <div class="card">
+          <h3>Email</h3>
+          <p class="muted"><b>7moty4050@gmail.com</b></p>
+        </div>
+        <div class="card">
+          <h3>WhatsApp</h3>
+          <p class="muted"><b>+21208519473</b></p>
+        </div>
+        <div class="card">
+          <h3>Response time</h3>
+          <p class="muted">Within 24 hours</p>
+        </div>
+      </div>
+    </div>
+  </section>
 </main>
 
 <footer class="footer">
-  <p>© <span id="year"></span> EG Store</p>
+  <div class="container footer-inner">
+    <div class="muted small">© <span id="y"></span> EG Store</div>
+    <div class="muted small">Bank transfer • Direct order</div>
+  </div>
 </footer>
 
 <!-- ===== Bank Transfer Modal ===== -->
@@ -95,8 +252,8 @@
 <div id="bankModal" class="modal" role="dialog" aria-modal="true" aria-labelledby="modalTitle">
   <div class="modal-top">
     <div>
-      <h3 id="modalTitle">Bank Transfer</h3>
-      <p class="muted small" id="modalSub">Choose a service</p>
+      <h3 id="modalTitle">Bank Transfer Details</h3>
+      <p class="muted small" id="modalSub">Transfer the amount using the details below</p>
     </div>
     <button class="icon-btn" onclick="closeBank()" aria-label="Close">✕</button>
   </div>
@@ -119,7 +276,7 @@
           <div class="label">IBAN</div>
           <div class="value mono" id="ibanText">EG210037002708181020671629935</div>
         </div>
-        <button class="btn ghost" onclick="copyText('ibanText', 'ibanStatus')">Copy</button>
+        <button class="btn ghost" onclick="copyText('ibanText','ibanStatus')">Copy</button>
       </div>
       <div class="status" id="ibanStatus"></div>
     </div>
@@ -130,7 +287,7 @@
           <div class="label">Account Number</div>
           <div class="value mono" id="accText">1020671629935</div>
         </div>
-        <button class="btn ghost" onclick="copyText('accText', 'accStatus')">Copy</button>
+        <button class="btn ghost" onclick="copyText('accText','accStatus')">Copy</button>
       </div>
       <div class="status" id="accStatus"></div>
     </div>
@@ -146,13 +303,12 @@
 </div>
 
 <script>
-  document.getElementById("year").textContent = new Date().getFullYear();
+  document.getElementById("y").textContent = new Date().getFullYear();
 
   function openBank(e, name, price) {
     e.preventDefault();
     document.getElementById("serviceName").textContent = name;
     document.getElementById("servicePrice").textContent = price;
-    document.getElementById("modalSub").textContent = "Transfer the amount using details below";
 
     document.getElementById("ibanStatus").textContent = "";
     document.getElementById("accStatus").textContent = "";
@@ -175,7 +331,6 @@
       status.textContent = "Copied ✅";
       setTimeout(() => status.textContent = "", 1500);
     } catch (err) {
-      // Fallback
       const temp = document.createElement("textarea");
       temp.value = text;
       document.body.appendChild(temp);
@@ -187,12 +342,10 @@
     }
   }
 
-  // Close on ESC
   document.addEventListener("keydown", function (e) {
     if (e.key === "Escape") closeBank();
   });
 
-  // Prevent closing when clicking inside modal
   document.getElementById("bankModal").addEventListener("click", function (e) {
     e.stopPropagation();
   });
