--- a/index.html
+++ b/index.html
@@ -136,6 +136,38 @@
     </div>
   </section>
 
+  <section id="about" class="section">
+  <div class="container">
+    <div class="section-head">
+      <div>
+        <h2>About Me</h2>
+        <p class="muted">Who I am & how I work</p>
+      </div>
+    </div>
+
+    <div class="card">
+      <p class="lead">
+        I’m a freelance graphic designer specialized in branding, logos,
+        social media designs, and Discord server visuals.
+      </p>
+
+      <p class="muted">
+        I focus on clean, modern designs that help brands stand out.
+        Every project is handled personally with clear communication,
+        fast delivery, and revision support.
+      </p>
+
+      <div class="chips">
+        <span class="chip">Branding</span>
+        <span class="chip">Logo Design</span>
+        <span class="chip">Social Media</span>
+        <span class="chip">Discord Design</span>
+        <span class="chip">Fast Delivery</span>
+      </div>
+    </div>
+  </div>
+</section>
+  
   <section id="contact" class="section">
     <div class="container">
       <h2>Contact</h2>
