--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
             <li>PNG + JPG + transparent</li>
             <li>Delivery: 2–3 days</li>
           </ul>
-          <a class="btn full" href="#" data-name="Logo Starter" data-price="50 USD">Buy Now</a>
+          <a class="btn full" href="#" data-name="Logo Starter" data-price="2500 EGP">Buy Now</a>
         </article>
 
         <article class="product card">
@@ -107,7 +107,7 @@
             <li>2 revisions</li>
             <li>Delivery: 2–4 days</li>
           </ul>
-          <a class="btn full" href="#" data-name="Social Pack (10 Posts)" data-price="100 USD">Buy Now</a>
+          <a class="btn full" href="#" data-name="Social Pack (10 Posts)" data-price="5000 EGP">Buy Now</a>
         </article>
 
         <article class="product card">
@@ -124,7 +124,7 @@
             <li>Basic role icons</li>
             <li>Delivery: 2–5 days</li>
           </ul>
-          <a class="btn full" href="#" data-name="Discord Server Design" data-price="80 USD">Buy Now</a>
+          <a class="btn full" href="#" data-name="Discord Server Design" data-price="3600 EGP">Buy Now</a>
         </article>
       </div>
 
